#1782 Sincronització amb l'Arxiu

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -622,6 +622,7 @@ info.document.massiu.generar=S&#39;ha programat la generació del document a {0} 
 info.document.massiu.esborrar=S&#39;ha programat la eliminació del document a {0} expedient(s)
 
 info.informacio.modificat=La informació s'ha modificat correctament
+info.informacio.modificat.err=La informació s'ha modificat correctament, pero no s'ha pogut sincronitzar amb l'arxiu.
 
 info.script.executat=L'script s'ha executat correctament
 info.script.massiu.executat=S&#39;ha programat l&#39;execució de l&#39;script a {0} expedient(s)
@@ -636,6 +637,7 @@ info.canvi.versio.realitzat.nprimers=El canvi de versió s'ha realitzat correctam
 info.canvi.versio.massiu=S&#39;ha programat el canvi de versió de {0} expedient(s)
 
 info.expedient.iniciat=L&#39;expedient s&#39;ha iniciat correctament: {0}
+info.expedient.iniciat.err=L&#39;expedient s&#39;ha iniciat correctament, pero no s&#39;ha pogut sincronitzar amb l&#39;arxiu: {0}
 
 info.tasca.reassignada=La tasca s&#39;ha reassignat correctament
 info.tasca.reprendre=La tasca s&#39;ha reprès correctament
