--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -170,14 +170,19 @@ interessat.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest in
 interessat.llistat.confirmacio.esborrar.representant=Estau segur que voleu esborrar aquest representant?
 
 
-interessat.controller.creat=L'interessat s'ha creat correctament
-interessat.controller.modificat=L'interessat s'ha modificat correctament
-interessat.controller.esborrat=L'interessat s'ha esborrat correctament
+interessat.controller.creat=L'interessat s'ha creat correctament.
+interessat.controller.creat.err=L'interessat s'ha creat correctament, pero no s'ha sincronitzat amb l'arxiu.
+interessat.controller.modificat=L'interessat s'ha modificat correctament.
+interessat.controller.modificat.err=L'interessat s'ha modificat correctament, pero no s'ha sincronitzat amb l'arxiu.
+interessat.controller.esborrat=L'interessat s'ha esborrat correctament.
+interessat.controller.esborrat.err=L'interessat s'ha esborrat correctament, pero no s'ha sincronitzat amb l'arxiu.
 interessat.controller.esborrar.error=Error esborrant l''interessat: {0}
 interessat.controller.representant.confirmacio.seleccionar=Esteu segur que voleu associar aquest representant a l'interessat?
 interessat.controller.representant.creat=El representat de l''interessat s'ha creat correctament
-interessat.controller.representant.modificat=El representat de l''interessat s'ha modificat correctament
-interessat.controller.representant.esborrat=El representat de l''interessat s'ha esborrat correctament
+interessat.controller.representant.modificat=El representat de l''interessat s'ha modificat correctament.
+interessat.controller.representant.modificat.err=El representat de l''interessat s'ha modificat correctament, pero no s'ha sincronitzat amb l'arxiu.
+interessat.controller.representant.esborrat=El representat de l''interessat s'ha esborrat correctament.
+interessat.controller.representant.esborrat.err=El representat de l''interessat s'ha esborrat correctament, pero no s'ha sincronitzat amb l'arxiu.
 interessat.controller.representant.error=Error esborrant el representant: {0}
 interessat.controller.representant.assignat=El representat s'ha assignat correctament a l''interessat
 interessat.controller.paisos.error=Error obtenint la llista de països
@@ -3508,5 +3513,5 @@ enum.sexe.SEXE_DONA=Dona
 
 expedient.boto.sincro.arxiu=Sincronitzar amb Arxiu
 expedient.boto.sincro.arxiu.ok=S'ha sincronitzat l'expedient, interessats i documents amb l'arxiu.
-expedient.boto.sincro.arxiu.ko=La sincronització de l'expedient amb l'arxiu no s'ha pogut realitzar: {0}
+expedient.boto.sincro.arxiu.ko=La sincronització de l''expedient amb l''arxiu no s''ha pogut realitzar.
 expedient.notifica.dades.retallar=Les dades dels següents interessats es retallaran en el moment de notificar per superar les mides màximes permeses per NOTIB:
