#1710 Adaptar el manteniment d'interessats als camps SICRES - Adaptació interessats d'anotacions de Distribució

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -615,11 +615,14 @@ info.document.notificar.avis=La notificació/comunicació del document s''ha envia
 info.document.notificar.error=S''ha produït un error notificant/comunicant el document: {0}
 
 info.document.guardat=El document s'ha guardat correctament
+info.document.guardat.err=El document s'ha guardat correctament, pero no s'ha pogut sincronitzar amb l'arxiu.
 info.document.guardat.error=S''ha produit un error guardant el document: {0}
 info.document.massiu.guardat=S&#39;ha programat la modificació del document a {0} expedient(s)
 info.document.guardats=Els documents s'ha guardat correctament
 info.document.massiu.generar=S&#39;ha programat la generació del document a {0} expedient(s)
 info.document.massiu.esborrar=S&#39;ha programat la eliminació del document a {0} expedient(s)
+info.document.modificat=El document s'ha modificat correctament
+info.document.modificat.err=El document s'ha modificat correctament, pero no s'ha pogut sincronitzar amb l'arxiu.
 
 info.informacio.modificat=La informació s'ha modificat correctament
 info.informacio.modificat.err=La informació s'ha modificat correctament, pero no s'ha pogut sincronitzar amb l'arxiu.
