--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -606,6 +606,7 @@ expedient.document.firmaPassarela.camp.motiu=Motiu
 expedient.document.firmaPassarela.camp.motiu.default=Tramitació de l''expedient [{0}]
 expedient.document.firmaPassarela.boto.firmar=Iniciar procés de firma
 expedient.document.firmaPassarela.validacio.custodia.codi=Es cancel·la la firma perquè no es podrà guardar el document firmat si el document no té codi de Custòdia ni integració amb l'Arxiu digital.
+expedient.document.firmaPassarela.validacio.no.convertible=El contingut del document s''ha de poder convertir a PDF abans de firmar-lo amb per passarel·la web. Els tipus convertibles són: {0}
 
 expedient.document.enviar.portasignatures.titol.adjunt=Enviar al portasignatures el document adjunt "{0}"
 expedient.document.enviar.portasignatures.titol.document=Enviar al portasignatures el document "{0}"
