--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -832,7 +832,7 @@ expedient.metadades.nti.dades.error.arreglar.success=La informació NTI de l'expe
 expedient.metadades.nti.dades.error.arreglar.error=Ha ocorregut un error arreglant la informació NTI: {0}
 
 expedient.error.finalitzant.expedient=Error finalitzant l'expedient
-expedient.error.prefinalitzant.expedient=Error al carregar la pantalla per finalitzar expedient
+expedient.error.prefinalitzant.expedient=Error durant la finalització de l'expedient
 
 document.metadades.nti.titol.nti=Metadades NTI
 document.metadades.nti.titol.arxiu=Metadades NTI i informació de l'arxiu
@@ -2773,7 +2773,7 @@ anotacio.form.acceptar.error.jquery.ajax=Error fent la petició AJAX al servidor
 anotacio.form.acceptar.noaccio=No s'ha seleccionat cap acció per realitzar.
 anotacio.form.acceptar.guardar.success=S''han guardat correctament les dades per l''anotació "{1}"
 anotacio.form.acceptar.crear.success=S''ha creat correctament l''expedient "{0}" per l''anotació "{1}"
-anotacio.form.acceptar.incorporar.success=L''anotació "{0}" s''ha incorporat correctament a l''epedient "{1}"
+anotacio.form.acceptar.incorporar.success=L''anotació "{0}" s''ha incorporat correctament a l''expedient "{1}"
 anotacio.form.acceptar.incorporar.errorAnnexos=L''anotació "{0}" conté annexos que no s''han pogut incorporar a l''expedinent "{1}" per algun error. S'han de revisar i reprocessar-los.  
 anotacio.form.acceptar.error=S''ha produït un error durant l''acció: "{0}" - {1}
 
@@ -3486,7 +3486,7 @@ expedient.eines.anular_expedients.motiu.err=El motiu de l'anul·lació és obligato
 expedient.eines.anular_expedients.ok=S&#39;ha programat l&#39;acció d&#39;anul·lar {0} expedient(s)
 
 finalitzar.expedient.titol=Finalitzar l''expedient: {0}
-finalitzar.expedient.info=Aquest expedient conté esborranys que serán eliminats al tancar-lo. A cotinuació pot marcar els esborranys per a que siguin firmats amb firma de servidor abans de tancar l'expedient i així no serán eliminats. Si els documents contenen alguna firma invàlida, aquesta será eliminada i es tornarà a firmar el document en servidor.
+finalitzar.expedient.info=Aquest expedient conté esborranys que seran eliminats al tancar-lo. A continuació podeu marcar els esborranys que voleu que siguin signats en servidor abans de tancar l'expedient i així no serán eliminats. Si els documents contenen alguna firma invàlida, aquesta será eliminada i es tornarà a signar el document en servidor.
 finalitzar.expedient.info2=Aquest expedient no conté cap esborrany, es pot finalitzar sense necessitat de cap acció addicional.
 finalitzar.expedient.info3=Aquest expedient no té la integració amb arxiu activada, es pot finalitzar sense necessitat de cap acció addicional.
 finalitzar.expedient.confirm=Estau segur que voleu finalitzar aquest expedient?
