Correccions implementades durant les proves de la versió 3.3.5
- La pantalla de prefinalitzar no processava correctament els documents
amb estat de portafirmes invalid per finalitzar. Ara mostra informació
completa dels documents i el seu darrer estat de PF.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3493,6 +3493,7 @@ finalitzar.expedient.confirm=Estau segur que voleu finalitzar aquest expedient?
 finalitzar.expedient.accio1=Firmar seleccionats
 finalitzar.expedient.accio2=Firmar seleccionats i finalitzar
 finalitzar.expedient.accio3=Finalitzar
+prefinalitzar.expedient.errorPendents=L'expedient té documents en un estat de portafirmes que no permet finalitzar. S'ha de finalitzar o cancelar la firma dels següents documents:
 expedient.finalitzat.ok=L'expedient s'ha finalitzat correctament.
 expedient.finalitzat.ok2=Els documents seleccionats s'han firmat i pujat correctament a l'Arxiu.
 expedient.error.prefinalitzant.anotacio=Els fitxers corresponents a una anotació, d'han de seleccionar obligatòriament per incloure's a l'Arxiu.
