#Correccions Helium 3.3.5 reprocessament mapeig des d'expedient

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1008,8 +1008,8 @@ expedient.anotacio.llistat.error.annexos=L'anotació conté error amb alguns annex
 expedient.anotacio.llistat.annexos.invalids=L'anotació conté annexos marcats com a invàlids que s'haurien de revisar.
 expedient.anotacio.llistat.annexos.esborranys=L'anotació conté annexos en estat d'esborrany que es podrien perdre si es tanca l'expedient a l'Arxiu.
 expedient.anotacio.llistat.processant=L'anotació s'està processant automàticament.
-expedient.anotacio.llistat.processar.mapeig=Processar mapeig
-expedient.anotacio.llistat.processar.mapeig.title=Torna a aplicar el mapeig de Sistra2 de l'anotació cap a l'expedient.
+expedient.anotacio.llistat.reprocessar.mapeig=Reprocessar mapeig...
+expedient.anotacio.llistat.reprocessar.mapeig.title=Torna a aplicar el mapeig de Sistra2 de l'anotació cap a l'expedient.
 expedient.anotacio.llistat.processar.traspas=Processar traspàs annexos (Arxiu)
 expedient.anotacio.llistat.processar.traspas.title=Torna a intentar moure els annexos entre expedients a l'Arxiu.
 expedient.anotacio.llistat.processar.mapeig.ok=L'anotació s'ha reprocessat correctament.
@@ -2470,12 +2470,13 @@ anotacio.llistat.reintentar.consulta=Reintentar consulta
 anotacio.llistat.reintentar.consulta.title=Posa els intents a 0 de les anotacions que estiguin comunicades i no s'hagin pogut consultar durant els intents establerts.
 anotacio.llistat.reintentar.processament=Reintentar processament
 anotacio.llistat.reintentar.processament.title=Torna a processar les anotacions amb error de processament. Les anotacions pendents o rebutjades es tornen a avaluar si hi ha cap tipus d'expedient que es pugui associar i en cas de tenir processament automàtic es duu a terme.
-anotacio.llistat.reintentar.mapeig=Reintentar mapeig ...
-anotacio.llistat.reintentar.mapeig.titol=Reintentar mapeig de {0} anotacions.
+anotacio.llistat.reintentar.mapeig=Reprocessar mapeig ...
+anotacio.llistat.reintentar.mapeig.titol=Reprocessar mapeig de {0} anotacions.
 anotacio.llistat.reintentar.mapeig.nosel=No s'ha seleccionat cap anotació del llistat.
-anotacio.llistat.reintentar.mapeig.vars=Reintentar mapeig de variables
-anotacio.llistat.reintentar.mapeig.docs=Reintentar mapeig de documents
-anotacio.llistat.reintentar.mapeig.adjn=Reintentar mapeig d'adjunts
+anotacio.llistat.reintentar.mapeig.vars=Reprocessar mapeig de variables
+anotacio.llistat.reintentar.mapeig.docs=Reprocessar mapeig de documents
+anotacio.llistat.reintentar.mapeig.adjn=Reprocessar mapeig d'adjunts
+anotacio.llistat.reintentar.mapeig.interessats=Reprocessar mapeig d'interessats
 anotacio.llistat.error.no.accio=S'ha de seleccionar al menys una acció.
 anotacio.llistat.reintentar.mapeig.title=En el cas que l'anotació estigui associada a un expedient i en el tipus d'expedient estigui configurat el mapeig amb Sistra2 es torna a processar el mapeig de variables, documents i adjunts.
 anotacio.llistat.reintentar.processament.nomes.annexos=Reintentar traspàs annexos
