--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3495,8 +3495,11 @@ finalitzar.expedient.accio1=Firmar seleccionats
 finalitzar.expedient.accio2=Firmar seleccionats i finalitzar
 finalitzar.expedient.accio3=Finalitzar
 prefinalitzar.expedient.errorPendents=L'expedient té documents en un estat de portafirmes que no permet finalitzar. S'ha de finalitzar o cancelar la firma dels següents documents:
-expedient.finalitzat.ok=L'expedient s'ha finalitzat correctament.
-expedient.finalitzat.ok2=Els documents seleccionats s'han firmat i pujat correctament a l'Arxiu.
+expedient.prefinalitzar.finalitzat=L'expedient s'ha finalitzat correctament.
+expedient.prefinalitzar.documents.firmats=Els documents seleccionats s'han firmat i guardat com a definitius a l'Arxiu correctament.
+expedient.prefinalitzar.document.firmat=S''ha firmat correctament {0}
+expedient.prefinalitzar.document.error=Error firmant {0} : {1}
+
 expedient.error.prefinalitzant.anotacio=Els fitxers corresponents a una anotació, d'han de seleccionar obligatòriament per incloure's a l'Arxiu.
 
 expedient.exportacio.index.num=Num.
