Correccions i Tancament Helium 3.3.5

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3135,6 +3135,7 @@ variable.helper.error.recuperant.valor=Error convertint el valor a variable tipu
 serveisPinbal.col.codi=Codi
 serveisPinbal.col.nom=Descripció
 serveisPinbal.col.docsRestr=Documents restringits
+serveisPinbal.col.docsRestr.info=Si un interessat té un tipus de document restringit llavors llavors aquest tipus de document no es podrà emprar per la consulta PINBAL
 serveisPinbal.col.pinbalServeiDocPermesDni=DNI permés
 serveisPinbal.col.pinbalServeiDocPermesNif=NIF permés
 serveisPinbal.col.pinbalServeiDocPermesCif=CIF permés
