--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3488,7 +3488,7 @@ expedient.eines.anular_expedients.motiu.err=El motiu de l'anul·lació és obligato
 expedient.eines.anular_expedients.ok=S&#39;ha programat l&#39;acció d&#39;anul·lar {0} expedient(s)
 
 finalitzar.expedient.titol=Finalitzar l''expedient: {0}
-finalitzar.expedient.info=Aquest expedient conté esborranys que seran eliminats al tancar-lo. A continuació podeu marcar els esborranys que voleu que siguin signats en servidor abans de tancar l'expedient i així no serán eliminats. Si els documents contenen alguna firma invàlida, aquesta será eliminada i es tornarà a signar el document en servidor.
+finalitzar.expedient.info=Aquest expedient conté esborranys. A continuació podeu marcar els esborranys que voleu que se signin en servidor abans de tancar l'expedient per conservar-los a l'Arxiu.
 finalitzar.expedient.info2=Aquest expedient no conté cap esborrany, es pot finalitzar sense necessitat de cap acció addicional.
 finalitzar.expedient.info3=Aquest expedient no té la integració amb arxiu activada, es pot finalitzar sense necessitat de cap acció addicional.
 finalitzar.expedient.confirm=Estau segur que voleu finalitzar aquest expedient?
