#1801 Error creant interessats de tipus administració

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -107,6 +107,7 @@ unitat.organitzativa.form.titol.modificar=Modificar unitat organitzativa
 unitat.organitzativa.codi=Codi
 unitat.organitzativa.denominacio=Denominació
 unitat.organitzativa.unitat.superior=Unitat Superior
+unitat.organitzativa.cif=CIF
 unitat.organitzativa.estat=Estat
 unitat.organitzativa.estat.vigent=Vigent
 unitat.organitzativa.estat.extingit=Extingit
