#1795 Avís per email de nova anotació rebuda a Helium

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -1431,6 +1431,7 @@ permisos.exp.sino=Si no és usuari serà un rol
 persona.consulta.persones=Persones
 persona.consulta.confirmacio=Estau segur que voleu esborrar aquest registre?
 persona.consulta.email=Email
+persona.consulta.email.alternatiu=Email alternatiu
 persona.consulta.consultar=Consultar
 persona.consulta.netejar=Netejar
 persona.consulta.ae=A/E
