--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1948,6 +1948,7 @@ expedient.tipus.integracio.distribucio.presencial.comment=Informació per la crea
 expedient.tipus.integracio.distribucio.crearActualitzarRegla=Crear/Actualitzar regla
 expedient.tipus.integracio.distribucio.consultarRegla=Consultar regla
 expedient.tipus.integracio.distribucio.canviEstatRegla=Canviar estat regla
+expedient.tipus.integracio.distribucio.enviar.correu.anotacions=Informar per correu electrònic de l'arribada o processament de noves anotacions als usuaris amb permís.
 
 expedient.tipus.integracio.notificacio.organCodi=Codi d'òrgan
 expedient.tipus.integracio.notificacio.oficinaCodi=Codi d'oficina
@@ -2911,6 +2912,9 @@ perfil.usuari.tipus.expedient=Tipus d'expedient
 perfil.usuari.consulta.tipus=Consulta
 perfil.usuari.nota.numelements=Numero d'elements que s'han de mostrar per defecte en les taules paginades.
 perfil.usuari.nota.filtre.defecte=Llistat d'expedients filtra per defecte o no expedients amb tasques actives per part de l'usuari.
+perfil.usuari.nota.enviament.correus=Enviament de correus
+perfil.usuari.nota.enviament.correus.avisos.bustia=Vols rebre els correus de la bústia?
+perfil.usuari.nota.enviament.correus.bustia.agrupats=Vols rebre els correus de la bústia agrupats en un únic correu al dia?
 
 termini.data_ini=Data inici
 termini.data_fi=Data fi
@@ -3522,3 +3526,7 @@ expedient.boto.sincro.arxiu=Sincronitzar amb Arxiu
 expedient.boto.sincro.arxiu.ok=S'ha sincronitzat l'expedient, interessats i documents amb l'arxiu.
 expedient.boto.sincro.arxiu.ko=La sincronització de l''expedient amb l''arxiu no s''ha pogut realitzar.
 expedient.notifica.dades.retallar=Les dades dels següents interessats es retallaran en el moment de notificar per superar les mides màximes permeses per NOTIB:
+
+anotacio.email.tipus.REBUDA_PENDENT=Rebuda Pendent
+anotacio.email.tipus.PROCESSADA=Processada
+anotacio.email.tipus.INCORPORADA=Incorporada
