#1747 Crear un menú "Consultar" i moure-hi les unitats i procediments per permetre veure l'arbre als usuaris

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -379,6 +379,7 @@ expedient.mesura.temps=Mesures de temps
 expedient.monitor=Monitor de sistema
 expedient.monitor.sistema=Sistema
 expedient.monitor.fils=Fils execució
+expedient.monitor.tasques.segon.pla=Tasques en segon pla
 expedient.monitor.det=Monitor
 expedient.monitor.NEW=Nuevo
 expedient.monitor.RUNNABLE=En ejecuci&oacute;n
@@ -404,7 +405,23 @@ expedient.monitor.os-arch=Arquitectura
 expedient.monitor.os-version=Versi&oacute;n
 expedient.monitor.space.total=Total space
 expedient.monitor.space.free=Free space
-
+expedient.monitor.tasques.tasca=Tasca
+expedient.monitor.tasques.estat=Estat
+expedient.monitor.tasques.darrer.inici=Darrer inici
+expedient.monitor.tasques.temps.execucio=Temps en execució
+expedient.monitor.tasques.propera.execucio=Propera execució
+expedient.monitor.tasques.observacions=Observacions
+expedient.monitor.tasques.check.refresh=Refrescar cada 1s
+expedient.monitor.tasques.estat.EN_EXECUCIO=En execució
+expedient.monitor.tasques.estat.EN_ESPERA=En espera
+expedient.monitor.tasques.estat.ERROR=Error
+expedient.monitor.tasques.codi.comprovarAnotacionsPendents=Comprovar anotacions pendents
+expedient.monitor.tasques.codi.comprovarExecucionsMassives=Comprovar execucions massives
+expedient.monitor.tasques.codi.comprovarReindexacioAsincrona=Comprovar reindexació asíncrona
+expedient.monitor.tasques.codi.actualitzarUnitatsIProcediments=Actualitzar unitats i procediments
+expedient.monitor.tasques.codi.updatePeticionsAsincronesPinbal=Actualitzar peticions asíncrones de Pinbal
+expedient.monitor.tasques.codi.comprovarEmailAnotacionsNoAgrupats=Enviament de correus no agrupats pendents
+expedient.monitor.tasques.codi.comprovarEmailAnotacionsAgrupats=Enviament periòdic de correus agrupats
 expedient.metriques=M&egrave;triques
 
 temps.clau=Clau
