--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -108,6 +108,7 @@ unitat.organitzativa.codi=Codi
 unitat.organitzativa.denominacio=Denominació
 unitat.organitzativa.unitat.superior=Unitat Superior
 unitat.organitzativa.cif=CIF
+unitat.organitzativa.nif.cif=NIF/CIF
 unitat.organitzativa.estat=Estat
 unitat.organitzativa.estat.vigent=Vigent
 unitat.organitzativa.estat.extingit=Extingit
@@ -117,9 +118,22 @@ unitat.organitzativa.estat.enum.VIGENTE=Vigent
 unitat.organitzativa.estat.enum.EXTINGUIDO=Extingit
 unitat.organitzativa.estat.enum.ANULADO=Anul·lat
 unitat.organitzativa.estat.enum.TRANSITORIO=Transitori
+unitat.organitzativa.estat.enum.V=Vigent
+unitat.organitzativa.estat.enum.E=Extingit
+unitat.organitzativa.estat.enum.A=Anul·lat
+unitat.organitzativa.estat.enum.T=Transitori
 unitat.organitzativa.controller.creat=La unitat organitzativa s'ha creat correctament
 unitat.organitzativa.controller.modificat=La unitat organitzativa s'ha modificat correctament
 unitat.organitzativa.controller.esborrat.ok=La unitat organitzativa s'ha esborrat correctament
+unitat.organitzativa.controller.boto.info=Veure detall
+unitat.organitzativa.detall.titol=Detall de la unitat organitzativa
+unitat.organitzativa.detall.dades.basiques=Dades bàsiques
+unitat.organitzativa.detall.dades.direccio=Dades de direcció
+unitat.organitzativa.detall.adressa=Adreça
+unitat.organitzativa.detall.codi.postal=Codi postal
+unitat.organitzativa.detall.provincia=Provincia
+unitat.organitzativa.detall.municipi=Municipi
+unitat.organitzativa.detall.pais=Pais
 unitat.organitzativa.list.boto.mostrarArbre=Mostrar arbre d'unitats vigents
 unitat.organitzativa.list.boto.synchronize=Sincronitzar
 unitat.arbre.titol=Arbre d'unitats vigents
@@ -3377,7 +3391,7 @@ consultes.pinbal.camp.consentiment=Consentiment
 
 consultes.pinbal.boto.just=Descarregar justificant
 consultes.pinbal.boto.update=Actualitzar estat
-consultes.pinbal.boto.info=Veurer detall
+consultes.pinbal.boto.info=Veure detall
 consultes.pinbal.boto.consultar=Consultar
 consultes.pinbal.detall.titol=Detall de consulta a PINBAL
 consultes.pinbal.resultat.ok=El document {0}, que conté el justificant de la petició PINBAL {1} s&#39;ha creat correctament.
