--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2504,6 +2504,14 @@ anotacio.llistat.reintentar.processament.nomes.annexos.title=Torna a intentar el
 anotacio.llistat.esborrar.anotacions=Esborrar anotacions
 anotacio.llistat.esborrar.anotacions.title=Aquesta acció esborra d'Helium les anotacions seleccionades que no estiguin processades, rebutjades ni comunicades.
 anotacio.llistat.seleccionats.reintentats.success=S''han reintat les consultes correctament {0} de les {1} anotacions seleccionades
+anotacio.llistat.email.avisar=Avisar per email
+anotacio.llistat.email.avisar.confirmacio.pedent=S'enviarà un correu electronic per avisar que hi ha una anotació pendent als usuaris amb permís de relacionar sobre el tipus d'expedient. Voleu continuar?
+anotacio.llistat.email.avisar.confirmacio.processada=S'enviarà un correu electronic per avisar que hi ha una anotació processada als usuaris amb permís de relació o lectura sobre l'expedient relacionat. Voleu continuar?
+anotacio.llistat.email.avisar.resultat.sense.destinataris=No s'ha trobat cap usuari amb permisos configurat per rebre correus de notificacions per aquesta anotació.
+anotacio.llistat.email.avisar.resultat.correctes=S''han enviat {0} correus de notificació per l''anotació als següents destinataris: {1}
+anotacio.llistat.email.avisar.resultat.errors=S''han produït {0} errors enviant el correu als següents destinataris: {1}
+anotacio.llistat.email.avisar.error=Error no controlat enviant correus d''avís per l''anotació a destinataris amb permisos: {0}
+
 anotacio.llistat.accio.massiva.no.seleccio=No hi ha cap anotació seleccionada
 anotacio.llistat.accio.massiva.info.reintentar.consulta.success=Tasca de reintentar consulta d'anotacions programada correctament
 anotacio.llistat.accio.massiva.info.reintentar.consulta.error=Error programant la tasca de reintentar consulta d'anotacions: {0}
