#1686 Tractar la petició d'anotacions pendents de forma independent al seu processament

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -422,6 +422,7 @@ expedient.monitor.tasques.codi.actualitzarUnitatsIProcediments=Actualitzar unita
 expedient.monitor.tasques.codi.updatePeticionsAsincronesPinbal=Actualitzar peticions asíncrones de Pinbal
 expedient.monitor.tasques.codi.comprovarEmailAnotacionsNoAgrupats=Enviament de correus no agrupats pendents
 expedient.monitor.tasques.codi.comprovarEmailAnotacionsAgrupats=Enviament periòdic de correus agrupats
+expedient.monitor.tasques.codi.processarAnotacionsAutomatiques=Processar anotacions pendents de processament automàtic
 expedient.metriques=M&egrave;triques
 
 temps.clau=Clau
