--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1036,7 +1036,7 @@ expedient.anotacio.llistat.processar.mapeig.ko=No s''ha pogut reprocessar l''ano
 expedient.anotacio.llistat.processar.traspas.ko=No s'ha pogut reprocessar els annexos de l'anotació.
 expedient.anotacio.llistat.processar.traspas.ok=Els annexos de l'anotació s'han reprocessat correctament.
 expedient.anotacio.llistat.processar.mapeig.permisos=L'usuari ha de tenir el permís de relacionar per reprocessar el mapeig a l'anotació.
-
+expedient.anotacio.llistat.processar.auto=L'anotació es processarà automàticament
 expedient.lucene.titol=Dades indexades a lucene per l''expedient {0}
 expedient.lucene.reindexacio.asincrona.data=L''expedient està pendent de reindexar amb data {0,date,dd/MM/yyyy HH:mm:ss}
 expedient.lucene.reindexacio.error=L'expedient està marcat amb error de reindexació
@@ -2544,12 +2544,15 @@ anotacio.proces.estat.enum.PROCESSADA=Processada
 anotacio.proces.estat.enum.COMUNICADA=Comunicada
 anotacio.proces.estat.enum.REBUTJADA=Rebutjada
 anotacio.proces.estat.enum.ERROR_PROCESSANT=Error processant
+anotacio.proces.estat.enum.PENDENT_AUTO=Pendent processament automàtic
 
-anotacio.proces.estat.enum.PENDENT.info=L'anotació ha estat consultada per Helium. Segons el codi de procediment, assumpte i número d'expedient de l'anotació se cercarà un tipus d'expedient integrat amb Distribucio. Si el tipus d'expedient està configurat per processar automàticament llavors es crearà un expedient o s'incorporarà a un expedient. Si el tipus d'expedient no té processament automàtic l'anotació quedarà pendent de que un usuari amb permís de relacionar processi l'anotació. Les anotacions en estat pendent que s'estan processant automàticament estan marcades amb una icona <span class="fa fa-cog"></span>. Helium marca aquestes anotacions com a rebudes al backoffice a Distribucio.
+anotacio.proces.estat.enum.PENDENT.info=L'anotació ha estat consultada per Helium. Segons el codi de procediment, assumpte i número d'expedient de l'anotació es cercarà un tipus d'expedient integrat amb Distribucio. El tipus d'expedient no té processament automàtic i l'anotació quedarà pendent de que un usuari amb permís de relacionar processi l'anotació.
 anotacio.proces.estat.enum.PROCESSADA.info=L'anotació s'ha processat correctament i s'ha creat un expedient o s'ha incorporat a un expedient existent de forma automàtica o manual. Helium marca aquestes anotacions com a processades pel backoffice a Distribucio.
 anotacio.proces.estat.enum.COMUNICADA.info=L'anotació ha estat comunicada a Helium per part de Distribucio i està pendent de que Helium en consulti els detalls. Aquestes anotacons apareixen com a comunicades a Distribucio.
 anotacio.proces.estat.enum.REBUTJADA.info=Les anotacions rebutjades són les que s'han rebutjat a Helium manualment o automàticament perquè no hi ha cap tipus d'expedient configurat que coincideixi amb el codi de procediment o assumpte. Helium marca aquestes anotacions com a rebutjades pel backoffice a Distribucio i especifica un motiu.
 anotacio.proces.estat.enum.ERROR_PROCESSANT.info=Les anotacions amb error de processament són les anotacions per les quals s'ha produït un error innesperat en el seu processament manual o automàtic. Helium marca aquestes anotacions com a processades amb error a Distribucio.
+anotacio.proces.estat.enum.PENDENT_AUTO.info=L'anotació ha estat consultada per heilum i està pendent de que es processi automàticament pel tipus d'expedient i/o expedient relacionat. El tipus d'expedient està configurat per processar automàticament i es crearà un expedient o s'incorporarà a un expedient. 
+anotacio.proces.estat.rodeta.info=Les anotacions en estat pendent o pendent de processar automàticament, quan s'estan processant automàticament estan  marcades amb una icona <span class="fa fa-cog"></span>. Helium marca aquestes anotacions com a rebudes al backoffice a Distribucio.
 
 anotacio.llistat.accio.expedient=Expedient
 anotacio.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquesta petició petició d'anotació? Aquesta acció no es pot tornar enrera una vegada executada.
@@ -2817,12 +2820,12 @@ anotacio.form.rebutjar.accio.rebutjar.success=Anotació rebutjada correctament
 anotacio.form.rebutjar.accio.rebutjar.error=Hi ha hagut un error rebutjant l''anotació: {0}
 
 
-
 enum.anotacio.estat.PENDENT=Pendent
 enum.anotacio.estat.PROCESSADA=Processada
 enum.anotacio.estat.REBUTJADA=Rebutjada
 enum.anotacio.estat.COMUNICADA=Comunicada
 enum.anotacio.estat.ERROR_PROCESSANT=Error processant
+enum.anotacio.estat.PENDENT_AUTO=Pendent processament automàtic
 
 enum.anotacio.accio.GUARDAR=Guardar
 enum.anotacio.accio.CREAR=Crear
