#1819 Afegir missatge d'advertència finalitzant manualment i desfinalitzant un expedient integrat amb l'Arxiu

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -155,6 +155,8 @@ expedient.eines.confirm_aturar_tramitacio=Estau segur que voleu aturar la tramit
 expedient.eines.confirm_modificar_variable=Estau segur que voleu modificar el valor d'aquesta variable en aquest(s) expedient(s)?
 expedient.eines.confirm_modificar_document=Estau segur que voleu modificar aquest document en aquest(s) expedient(s)?
 expedient.eines.finalitzar=Estau segur que voleu finalitzar aquest expedient?
+expedient.eines.confirm.finalitzar.expedient.arxiu=S'avisa que el tancament de l'expedient comporta, en l'arxiu Digital del Govern, un traspàs de documents des de la fase activa (DM) cap a la fase històrica (RM). Els documents ja incorporats seguiran en fase històrica (RM) dins l'Arxiu Digital, i els nous documents no s'hi podran transferir. Aquest procés no es pot revertir, per la qual cosa serà impossible la reobertura de l'expedient tancat
+expedient.eines.confirm.desfinalitzar.expedient.arxiu=S'avisa que l'expedient no es desfinalitzarà a l'arxiu ja que es troba tancat
 expedient.eines.confirm_reprendre_tramitacio=Estau segur que voleu reprendre la tramitació d'aquest expedient?
 expedient.eines.confirm_reprendre_tramitacions=Estau segur que voleu reprendre la tramitació dels expedients?
 expedient.eines.confirm_reindexar_expedient=Estau segur que voleu reindexar l'expedient?
