#1814 Modificar el manual d'usuari per incloure les utilitzats d'administració

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -1490,6 +1490,7 @@ reassign.llistat.tipusExpedientId=Id tipus expedient
 reassign.llistat.data_ini=Data inici
 reassign.llistat.data_fi=Data fi
 reassign.llistat.titol=Introduir nova redirecció
+reassign.llistat.tasca=Reassignació de tasca
 
 rol.form.crear_nou=Crear nou rol
 rol.form.modificar=Modificar rol
