--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1949,7 +1949,7 @@ expedient.tipus.integracio.tramits.documents=Documents
 expedient.tipus.integracio.tramits.adjunts=Adunts
 expedient.tipus.integracio.tramits.tramitCodi=Identificador del tràmit (SISTRA1)
 expedient.tipus.integracio.tramits.tramitCodi.validacio.NotEmpty=És obligatori especificar el codi del tràmit SISTRA1 si el tipus d'expedien no està integrat amb DISTRIBUCIO i no està integrat amb SISTRA2.
-
+expedient.tipus.integracio.tramits.tramitCodi.comment=(Només iniciats amb SISTRA1)
 expedient.tipus.integracio.distribucio.controller.guardat=Els canvis s'han guardat correctament
 expedient.tipus.integracio.distribucio.validacio = Errors de validació
 expedient.tipus.integracio.distribucio.activar=Activar
