#1822 Modificar el cercador de tipus d'expedients per cercar el codi SIA de les metadades, DISTRIBUCIO o NOTIB

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1257,6 +1257,8 @@ expedient.tipus.cercador.tipologies.codi.tipologia = Codi tipus
 expedient.tipus.cercador.tipologies.nom.tipologia = Nom tipus
 expedient.tipus.cercador.tipologies.tipus.expedient.titol = Tipus d'expedient
 expedient.tipus.cercador.tipologies.codi.sia = Codia SIA del procediment
+expedient.tipus.cercador.tipologies.codi.sia.notib = Codia SIA del procediment (NOTIB)
+expedient.tipus.cercador.tipologies.codi.sia.distribucio = Codia SIA del procediment (DIS)
 expedient.tipus.cercador.tipologies.numero.registre.anotacio = Número de registre
 expedient.tipus.cercador.tipologies.entorn = Entorn
 
