#1734 Unificar els codis de procediment en el disseny de tipus d'expedient
#1822 Modificar el cercador de tipus d'expedients per cercar el codi SIA
de les metadades, DISTRIBUCIO o NOTIB (canviar literals columnes)

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2009,7 +2009,7 @@ expedient.tipus.metadades.nti.arxiu.actiu=Integració amb arxiu activa
 expedient.tipus.metadades.nti.validacio = Errors de validació
 expedient.tipus.metadades.nti.procediment.comu=Procediment comú
 expedient.tipus.metadades.nti.procediment.comu.info=Aquest valor no es podrà canviar un cop hi hagi expedients d'aquest tipus d'expedient
-
+expedient.tipus.metadades.nti.clasificacion.codi.erroni=Aquest codi de procediment és diferent del de la configuració de metadades NTI i Arxiu: 
 expedient.tipus.metadades.nti.unitat.organitzativa.no.trobada=No s''ha trobat la unitat organitzativa amb codi {0} dins de l''abre d''unitats organitzatives. 
 expedient.tipus.metadades.nti.unitat.organitzativa.no.vigent=La unitat amb codi {0} es troba en l''estat {1}
 expedient.tipus.metadades.nti.unitat.organitzativa.estat.V=vigent
