#1830 Permetre obtenir estadístiques de tipus d'expedient de tot Helium (millora select)

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -447,6 +447,7 @@ expedient.llistat.titol=Consulta d'expedients
 expedient.llistat.tasca.ajax.error=Error al refrescar la llista d'tasques
 expedient.llistat.expedientTipusPermis.ajax.error=Error l'obtenir els permisos sobre aquest tipus d'expedient
 expedient.llistat.estats.ajax.error=Error al refrescar la llista d'estats
+expedient.llistat.expedient.tipus.ajax.error=Error al refrescar la llista de tipus d'expedients
 expedient.llistat.consults.ajax.error=Error al refrescar la llista d'consults
 expedient.llistat.filtre.camp=Filtre per
 expedient.llistat.filtre.camp.numero=Número
@@ -1251,6 +1252,7 @@ expedient.tipus.exportar.form.camp.ambRetroaccio=Amb retroacció
 expedient.tipus.exportar.form.camp.reindexacioAsincrona=Reindexació asíncrona
 
 expedient.tipus.estadistica.titol = Estadística per tipus d'expedient
+expedient.tipus.estadistica.filtre.camp.entorn=Entorn
 expedient.tipus.cercador.tipologies.titol = Cercador de tipus d'expedient
 
 expedient.tipus.cercador.tipologies.codi.tipologia = Codi tipus
