#1848 Afegir una validació per controlar el codi de tipus d'expedient ja existent

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1363,12 +1363,14 @@ expedient.tipus.importar.form.error.arxiu.erroni=El contingut de l''arxiu no es 
 expedient.tipus.importar.form.error.lectura=Error llegint l'arxiu a importar
 expedient.tipus.importar.form.error.importacio=Error durant la importació del contingut: {0}
 expedient.tipus.importar.validacio.codi.repetit=Tipus d''expedient ja existent: {0}
+expedient.tipus.importar.validacio.codi.repetit.entorn=Aquest codi de tipus d''''expedient ja existeix a l''''entorn {0} - {1}
 expedient.tipus.importar.validacio.no.heretable.amb.heretats=El tipus d''''expedient té {0} tipus d''''expedients fills que hereten i no es pot sobreescriure la seva propietat "Heretable" a fals. Podeu desseleccionar la opció d''''incloure dades bàsiques
 expedient.tipus.importar.validacio.expedient.tipus.pare.no.trobat=El tipus d''''expedient hereta de "{0}" el qual no es troba dins l''''entorn
 
 expedient.tipus.importar.form.success=La importació del tipus d'expedient s'ha realitzat correctament.
 
 expedient.tipus.validacio.codi.repetit=Aquest codi ja existeix
+expedient.tipus.validacio.codi.repetit.entorn=Aquest codi de tipus d''''expedient ja existeix a l''''entorn {0} - {1}
 expedient.tipus.validacio.no.heretable.amb.heretats=El tipus d''''expedient té {0} tipus d''''expedients que hereten
 expedient.tipus.validacio.heretable.i.expedientTipusPare=El tipus d'expedient no pot ser heretable i heretar a la vegada
 expedient.tipus.validacio.heretable.sense.info.propia=El tipus d'expedient no pot ser heretable si no està marcat per tenir informació pròpia
