Afegir un validador en el formulari d'alta de documents #1853

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -74,6 +74,7 @@ error.descarregar.fitxer=Error al descarregar el fitxer amb token
 error.validacio.token=Error de validació retrocedint token
 error.camp.boolea.valid=El valor ha de ser true o false
 error.validator=Error intern de validació
+error.fixer.max.size=La mida del fitxer no pot superar {0}
 
 error.data.anterior=La data no pot ser anterior al dia d'avui
 error.dataFi.anterior=La data de fi no pot ser anterior a la data d'inici
