--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2968,6 +2968,8 @@ configuracio.parametres.accio.guardar.confirmacio=Valors guardats correctament
 configuracio.parametres.propagarEsborratExpedients=Propagar esborrat d'expedients
 configuracio.parametres.propagarEsborratExpedients.info=Si s'habilita es permetrà la propagació de l'esborrat d'expedients quan s'esborri un tipus d'expedient
 configuracio.parametres.unitats.organitzatives=Unitats organitzatives
+configuracio.parametres.fitxerMidaMaxim=Mida maxima d'un fitxer que es pot pujar
+configuracio.parametres.fitxerMidaMaxim.info=Es poden indicar valors en MB i KB.
 
 metriques.timers.llegenda=Llegenda:
 metriques.timers.pes=Pes: Nombre d'execucions x Temps mig d'una execució (ms)
