--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -873,6 +873,8 @@ document.metadades.nti.csv=CSV
 document.metadades.nti.defgen.csv=Normativa de generació del CSV
 document.metadades.nti.darrera.versio=L'Arxiu només permet obtenir la darrera versió dels documents per expedients tancats
 
+expedientmetadades.arxiu.errors=Hi ha errors de sincronització amb l'Arxiu
+
 document.validacio.codiCustodia.error=Per poder guardar la firma a custòdia és necessari un codi de custòdia associat al document
 
 expedient.dada.mostrar.ocultes=Mostrar ocultes
