#1548 Editor gràfic per formularis de tasques

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2268,6 +2268,17 @@ definicio.proces.tasca.variable.columna.readOnly=Read only
 definicio.proces.tasca.variable.columna.ampleCols=Col. Ample
 definicio.proces.tasca.variable.columna.buitCols=Col. Buit
 
+definicio.proces.tasca.variable.disseny.titol=Disseny de variables de la tasca {0}
+definicio.proces.tasca.variable.columna.afegir.buitCols=Afegir columna buida
+definicio.proces.tasca.variable.columna.afegir.ampleCols=Afegir amplada
+definicio.proces.tasca.variable.columna.reduir.ampleCols=Reduir amplada
+definicio.proces.tasca.variable.columna.reduir.ampleCols=Reduir amplada
+
+definicio.proces.tasca.variable.disseny.refdata=Dades de referència
+
+
+
+
 definicio.proces.tasca.variable.columna.ordre=Ordre
 definicio.proces.tasca.variable.accio.afegir=Afegir
 definicio.proces.tasca.variable.accio.esborrar=Esborrar
