#1836 Millorar la llegenda dels estats en el llistat d'anotacions

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1042,6 +1042,7 @@ expedient.anotacio.llistat.processar.traspas.ko=No s'ha pogut reprocessar els an
 expedient.anotacio.llistat.processar.traspas.ok=Els annexos de l'anotació s'han reprocessat correctament.
 expedient.anotacio.llistat.processar.mapeig.permisos=L'usuari ha de tenir el permís de relacionar per reprocessar el mapeig a l'anotació.
 expedient.anotacio.llistat.processar.auto=L'anotació es processarà automàticament
+expedient.anotacio.llistat.diagrama.alt=Diagrama d'estats de Distribució
 expedient.lucene.titol=Dades indexades a lucene per l''expedient {0}
 expedient.lucene.reindexacio.asincrona.data=L''expedient està pendent de reindexar amb data {0,date,dd/MM/yyyy HH:mm:ss}
 expedient.lucene.reindexacio.error=L'expedient està marcat amb error de reindexació
