#1866 Error tramitant tasques pel excés número camps formulari

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2448,6 +2448,7 @@ tasca.tramitacio.sense.pipelles=Aquesta tasca no requereix omplir cap dada ni ad
 tasca.tramitacio.form.no.validat=Les dades de la tasca no han estat validades
 tasca.tramitacio.documents.no.complet=Hi ha documents obligatoris que no han estat adjuntats a la tasca
 tasca.tramitacio.firmes.no.complet=Hi ha documents amb firma obligatòria que estan pendents de firmar
+tasca.tramitacio.form.maxHttpParameters=S''ha superat el nº de camps permesos pel formulari ({0}).
 
 repro.missatge.repro=La Repro
 repro.missatge.creat=s'ha guardat correctament
