#1888 Facilitar la descàrrega del document original

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -611,6 +611,9 @@ expedient.document.notificar.form.camp.entregaPostalFormatFulla=Format fulla
 expedient.document.descarregar=Descarregar document
 expedient.document.descarregar.zip=Descarregar la documentació com un arxiu comprimit .zip
 expedient.document.descarregar.zip.error=S''ha produït un error generant i descarregant el .zip amb la documentació: {0}
+
+expedient.document.descarregar.autentica.imprimible=Descarregar còpia autèntica imprimible
+
 expedient.document.filtrar=Filtrar documents
 expedient.document.mostrar.tots=Mostrar tots
 expedient.document.filtrar.trobats=documents trobats
