#1548 Editor gràfic per formularis de tasques
- Modificat estil del editor grafic
- Solucionats errors del scroll al refrescar el formulari
- Afegida funcionalitat per mostrar espais davant dels camps

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2927,6 +2927,7 @@ comu.cap=Cap
 comu.tots=Tots
 comu.totes=Totes
 comu.arxiu=Arxiu
+comu.taula=Taula
 comu.processant=Processant
 comu.boto.detalls=Detalls
 comu.boto.acceptar=Acceptar
@@ -2934,6 +2935,7 @@ comu.boto.rebutjar=Rebutjar
 comu.boto.reintentar=Reintentar
 comu.darrera.actualitzacio=Darrera actualització
 comu.boto.seleccionar=Seleccionar
+comu.boto.dissenyar=Dissenyar
 comu.true=Sí
 comu.false=No
 
